[package]
name = "datanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.18"
solana-client = "1.18"
tokio = { version = "1.13", features = ["full"] }
csv = "1.3"
thiserror = "1.0"
toml = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
arrayref = "0.3"
log = "0.4"
chrono = "0.4"
futures-util = "0.3"
env_logger = "0.9"

[dev-dependencies]
tokio = { version = "1.13", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
